--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^0.8.3",
+    "bluebird": "^3.5.3",
     "body-parser": "^1.13.2",
     "colors": "^1.1.2",
     "express": "^4.13.1",
     "express-jwt": "^3.0.1",
     "jsonwebtoken": "^5.0.4",
     "lodash": "^3.10.0",
-    "mongoose": "^4.0.8",
-    "morgan": "^1.6.1"
+    "mongoose": "^5.4.1",
+    "morgan": "^1.6.1",
+    "node-gyp": "^3.8.0"
   },
   "devDependencies": {
     "chai": "^3.2.0",
